# LaserMX

./: .gitignore  README.md  pyproject.toml  requirements.txt
lasermx/: cli.py  main.py  requirements.txt
lasermx/drivers/: fake_grbl.py  grbl_serial.py
lasermx/gui/: app.py  main_window.py
lasermx/pipeline/: dxf_loader.py  gcode_generator.py  svg_loader.py
lasermx/utils/: logging_setup.py  serial_utils.py
